--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,15 @@
     ],
     "require": {
         "php": ">=5.6",
+
+        "symfony/framework-bundle": "~2.8|~3.0",
         "symfony/config": "~2.8|~3.0",
         "symfony/dependency-injection": "~2.8|~3.0",
         "symfony/http-kernel": "~2.8|~3.0",
-        "tenolo/twig-extensions": "~0.1@dev"
+
+        "tenolo/twig-extensions": "~0.1@dev",
+
+        "mmoreram/symfony-bundle-dependencies": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0"
