--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -15,6 +15,11 @@ services:
         tags:
             - { name: twig.extension }
 
+    tenolo_twig_extensions.twig_extension.content:
+        class: Tenolo\Twig\Extensions\Extension\ContentExtension
+        tags:
+            - { name: twig.extension }
+
     tenolo_twig_extensions.twig_extension.form:
         class: Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\FormExtension
         arguments: ['@translator']
