--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": "~5.6|~7.0",
 
         "symfony/framework-bundle": "~2.8|~3.0",
         "symfony/config": "~2.8|~3.0",
@@ -34,6 +34,7 @@
 
         "tenolo/twig-extensions": "~0.2",
 
+        "twig/twig": "~1.34|~2.0",
         "mmoreram/symfony-bundle-dependencies": "~1.0"
     },
     "require-dev": {
