--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-release/0.1": "0.1-dev"
+            "dev-master": "1.0-dev"
         }
     },
     "minimum-stability": "dev",
