--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "symfony/dependency-injection": "~2.8|~3.0",
         "symfony/http-kernel": "~2.8|~3.0",
 
-        "tenolo/twig-extensions": "~0.2",
+        "tenolo/twig-extensions": "~0.3|~1.0",
 
         "twig/twig": "~1.34|~2.0",
         "mmoreram/symfony-bundle-dependencies": "~1.0"
