--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
     "require": {
         "php": "~5.6|~7.0",
 
-        "symfony/framework-bundle": "~2.8|~3.0",
-        "symfony/config": "~2.8|~3.0",
-        "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/http-kernel": "~2.8|~3.0",
-        "symfony/http-foundation": "~2.8|~3.0",
-        "symfony/routing": "~2.8|~3.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
+        "symfony/http-foundation": "~2.8|~3.0|~4.0",
+        "symfony/routing": "~2.8|~3.0|~4.0",
 
         "tenolo/twig-extensions": "~0.3|~1.0",
 
@@ -49,11 +49,6 @@
     "autoload": {
         "psr-4": {
             "Tenolo\\Bundle\\TwigExtensionsBundle\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tenolo\\Bundle\\TwigExtensionsBundle\\Tests\\": "tests/"
         }
     },
     "extra": {
