--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "tenolo/twig-extensions": "~0.3|~1.0",
 
         "phive/twig-extensions-deferred": "~1.0|~2.0",
-        "twig/twig": "~1.34|~2.0",
-        "mmoreram/symfony-bundle-dependencies": "~1.0"
+        "twig/twig": "~1.34|~2.0"
     },
     "repositories": [
         {
