--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
     "require": {
         "php": "~5.6|~7.0",
 
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/config": "~2.8|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
-        "symfony/http-kernel": "~2.8|~3.0|~4.0",
-        "symfony/http-foundation": "~2.8|~3.0|~4.0",
-        "symfony/routing": "~2.8|~3.0|~4.0",
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/config": "~3.4|~4.0",
+        "symfony/dependency-injection": "~3.4|~4.0",
+        "symfony/http-kernel": "~3.4|~4.0",
+        "symfony/http-foundation": "~3.4|~4.0",
+        "symfony/routing": "~3.4|~4.0",
 
         "tenolo/twig-extensions": "~0.3|~1.0",
 
