--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 
         "phive/twig-extensions-deferred": "~1.0|~2.0",
         "twig/extensions": "~1.5",
-        "twig/twig": "~1.34|~2.0"
+        "twig/twig": "^2.11|^3.0"
     },
     "repositories": [
         {
