--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "homepage": "http://tenolo.de",
     "authors": [
         {
-            "name": "tenolo - Robert Bernis, Johannes Herberhold GbR",
+            "name": "tenolo GmbH & Co. KG",
             "email": "info@tenolo.de",
             "homepage": "http://tenolo.de"
         },
@@ -33,19 +33,14 @@
         "symfony/http-kernel": "~3.4|~4.0",
         "symfony/http-foundation": "~3.4|~4.0",
         "symfony/routing": "~3.4|~4.0",
+        "symfony/yaml": "~3.4|~4.0",
 
-        "tenolo/twig-extensions": "~0.3|~1.0",
+        "tenolo/twig-extensions": "~1.0",
 
         "phive/twig-extensions-deferred": "~1.0|~2.0",
         "twig/extensions": "~1.5",
         "twig/twig": "^2.11|^3.0"
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://repo.tenolo.com/"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Tenolo\\Bundle\\TwigExtensionsBundle\\": "src/"
@@ -53,7 +48,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.3-dev"
         }
     },
     "minimum-stability": "dev",
