--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,20 +2,21 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: true
+        public: false
 
     # service
-    Tenolo\Bundle\TwigExtensionsBundle\Service\TwigGlobalsManager: ~
-    tenolo_twig_extensions.twig_globals: '@Tenolo\Bundle\TwigExtensionsBundle\Service\TwigGlobalsManager'
+    Tenolo\Bundle\TwigExtensionsBundle\Service\:
+        resource: '../../Service/*'
 
     # event listener
-    Tenolo\Bundle\TwigExtensionsBundle\EventListener\TwigConfigNumberFormatListener: ~
+    Tenolo\Bundle\TwigExtensionsBundle\EventListener\:
+        resource: '../../EventListener/*'
 
     # twig extensions
-    Tenolo\Twig\Extensions\Extension\FilesizeExtension: ~
     Tenolo\Twig\Extensions\Extension\ArrayExtension: ~
     Tenolo\Twig\Extensions\Extension\ColorExtension: ~
     Tenolo\Twig\Extensions\Extension\ContentExtension: ~
+    Tenolo\Twig\Extensions\Extension\FilesizeExtension: ~
 
     # external twig extensions
     Twig\Extensions\TextExtension: ~
@@ -25,6 +26,10 @@ services:
     Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\ContainerExtension:
         arguments: ['@service_container']
 
-    Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\FormExtension: ~
-    Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\RoutingExtension: ~
-    Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\TwigGlobalsExtension: ~
+    Tenolo\Bundle\TwigExtensionsBundle\Twig\Extension\:
+        resource: '../../Twig/Extension/*'
+
+    # legacy
+    tenolo_twig_extensions.twig_globals:
+        alias: Tenolo\Bundle\TwigExtensionsBundle\Service\TwigGlobalsManager
+        public: true
